# my-openenv

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  client.py  create_db.py  env.example  inference.py  models.py  openenv.yaml  pharma_agent_environment.py  pyproject.toml  requirements.txt
openenv_pharma_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: README.md  validate-submission.ps1
server/: app.py
